--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -6,9 +6,9 @@
   gap: 2rem;
   padding: 2.5rem 2.5rem;
   border: 1px solid var(--color-black);
-  border-radius: 5%;
+  border-radius: 1.8rem;
   box-shadow: var(--color-black) 0.8rem 0.8rem;
-  transition: all 150ms ease-in-out;
+  transition: all 200ms ease-out;
 
   img {
     border-radius: 1rem;
@@ -55,8 +55,8 @@
     font-weight: bold;
 
     img {
-      width: 4rem;
-      height: 4rem;
+      width: 3rem;
+      height: 3rem;
     }
   }
 }
