added  font changes to the website

--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -16,5 +16,5 @@ body {
   background: var(--color-yellow);
   color: var(--color-grey);
   height: 100vh;
-  font-family: var(--font-figtree);
+  font-family: var(--font-figtreeSBold);
 }
