--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-white);
-  width: 40rem;
+  max-width: 40rem;
   gap: 2rem;
   padding: 2.5rem 2.5rem;
   border: 1px solid var(--color-black);
@@ -33,7 +33,10 @@
   &__title {
     font-size: 2.4rem;
     color: var(--color-black);
+
+    font-family: var(--font-figtreeXBold);
     font-weight: bold;
+
     cursor: pointer;
 
     &:hover {
